fix grid gaps

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ main{
 }
 
 section{
-    margin: 0 auto;
+    margin: 0;
     background: #eee;
     box-shadow: 12px 12px 2px 1px rgba(9, 9, 9, 0.2);
 }
@@ -57,8 +57,6 @@ section{
 #likes, #dislikes{
     grid-column: 1/2;
     grid-row: 1/3;
-    min-width: 200px;
-    max-width: 300px;
 }
 
 #dislikes{
@@ -116,15 +114,20 @@ li{
 }
 
 section li{
+    width: 60%;
     text-align: left;
-    margin: 0px 40px;
+    margin: 0 auto
+}
+
+#about p{
+    padding: 10px;
 }
 
 footer{
     margin: 20px 0px;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 300px) {
 
     main{
         grid-template-columns: 1fr;
